--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<div class="container">
-  <h1 class="text-center">{{ appTitle }}</h1>
-  <app-add-todo></app-add-todo>
-  <app-todos></app-todos>
+<div class="App">
+  <app-header></app-header>
+  <div class="container">
+    <h1 class="text-center">{{ appTitle }}</h1>
+    <router-outlet></router-outlet>
+  </div>
 </div>
